fix: correct the way that long lines wrap

--- a/index.css
+++ b/index.css
@@ -28,8 +28,9 @@
   font-family: "MS Sans Serif", consolas, monospace;
   margin: -15px 0 0 0;
   padding: 0 0.5em 0 0.5em;
+  white-space: pre-wrap;
+  overflow-wrap: anywhere;
   overflow-x: hidden;
-  white-space: pre;
 }
 
 .windows-command-prompt > .language-windows-command-prompt::selection {
